这个是啥不懂

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,16 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+*.meta
+*.pdf
+*.txt
+*.ttf
+*.mat
+*.asset
+*.shader
+*.cginc
+*.asset
+*.png
+*.json
+*.asset
+*.asset
