--- a/.gitignore
+++ b/.gitignore
@@ -70,19 +70,19 @@ crashlytics-build.properties
 # Packed Addressables
 /[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
 
-# Temporary auto-generated Android Assets
-/[Aa]ssets/[Ss]treamingAssets/aa.meta
-/[Aa]ssets/[Ss]treamingAssets/aa/*
-*.meta
-*.pdf
-*.txt
-*.ttf
-*.mat
-*.asset
-*.shader
-*.cginc
-*.asset
-*.png
-*.json
-*.asset
-*.asset
+# # Temporary auto-generated Android Assets
+# /[Aa]ssets/[Ss]treamingAssets/aa.meta
+# /[Aa]ssets/[Ss]treamingAssets/aa/*
+# *.meta
+# *.pdf
+# *.txt
+# *.ttf
+# *.mat
+# *.asset
+# *.shader
+# *.cginc
+# *.asset
+# *.png
+# *.json
+# *.asset
+# *.asset
